# mcp-etf-holdings

./: CHANGELOG.md  LICENSE  NOTICE  README.md  pyproject.toml  run_server.sh
.github/workflows/: publish.yml
src/agents/: data_fetcher.py
src/mcp_servers/etf_holdings/: fetcher.py  server.py  top_etfs.py
