[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-etf-holdings"
version = "0.1.0"
description = "MCP server for ETF reverse lookup — find which ETFs hold any stock"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "yfinance>=0.2.40",
    "pandas>=2.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
etf-holdings-server = "src.mcp_servers.etf_holdings.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
