[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-etf-holdings"
version = "0.1.0"
description = "MCP server for ETF reverse lookup — find which ETFs hold any stock"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "mcp-etf-holdings contributors" },
]
keywords = ["mcp", "etf", "stocks", "finance", "yfinance", "model-context-protocol"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business :: Financial :: Investment",
  "Intended Audience :: Developers",
]
dependencies = [
  "mcp>=1.0.0",
  "yfinance>=0.2.40",
  "pandas>=2.0.0",
  "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/vlearner/mcp-etf-holdings"
"Bug Tracker" = "https://github.com/vlearner/mcp-etf-holdings/issues"

[project.scripts]
etf-holdings-server = "src.mcp_servers.etf_holdings.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]